--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                     </li>
                 </ul>
             </address>
-            <button class="burger-button is-open" type="button">
+            <button class="burger-button" type="button">
                 <svg class="icon-burger" width="24" height="24">
                     <use href="./images/icons.svg#icon-burger"></use>
                 </svg>
             </button>
-            <div class="mobile-menu">
+            <div class="mobile-menu is-open">
                 <div class="container mobile-menu-container">
                     <button class="mobile-menu-close">
                         <svg class="mobile-menu-icon" width="8" height="8">
@@ -75,7 +75,7 @@
                             </li>
                         </ul>
                     </address>
-                    <ul class="soc-list">
+                    <ul class="mobile-soc-list">
                         <li class="icon-socials">
                             <a class="soc-link" href="">
                                 <svg class="icon-soc-img" width="24" height="24">
